fixed the overlap on nasa accordions

--- a/src/global/_content-group.scss
+++ b/src/global/_content-group.scss
@@ -2,7 +2,9 @@
     background: $whitebackground;
     margin: 0;
     padding: 0;
-    
+    > br {
+        display: none;
+    }
     ul {
         list-style: none;
         margin-left: 0;
