--- a/src/global/_quiz.scss
+++ b/src/global/_quiz.scss
@@ -22,6 +22,9 @@
             }
         }
     }
+    .columns {
+        margin-top: 0;
+    }
     .ui-accordion-header-icon {
         display: none;
     }
@@ -117,7 +120,7 @@
   }
   a {
     margin-left:20px;
-	margin-right:20px;
+	margin-right:20px; 
   }
 }
 
